--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 </div>
                 <div id="people-para">
                 <p id="people-no">Number of People</p>
+                <p class="mydiv">Can't be zero</p>
                 </div>
                 <img class="icon" src="images/icon-person.svg"><input id="people" type="number" placeholder="0" oninput="getpeopleInput()"></img>
             </div>
